# error2

./: Cargo.toml  README-zh_cn.md  README.md
error2/: Cargo.toml
error2-derive/: Cargo.toml
error2-derive/src/: error2.rs  error_ext.rs  generics.rs  lib.rs  messages.rs  parser.rs  types.rs
error2/src/: _attach.rs  attach.rs  backtrace.rs  boxed.rs  context.rs  error2.rs  error_ext.rs  error_wrap.rs  extract.rs  file_path.rs  future_ext.rs  interner.rs  iterator_ext.rs  kind.rs  lib.rs  location.rs  locations.rs  macros.rs  next_error.rs  none.rs  option_ext.rs  result_ext.rs  root_error.rs  small_string.rs  stream.rs  stream_ext.rs  transform.rs
error2/src/attach/: future.rs  iter.rs  mod.rs  stream.rs
error2/src/backtrace/: double_locations.rs  message.rs  mod.rs
error2/src/boxed/: mod.rs  root_err.rs  std_err.rs
error2/src/static_str/: interner.rs  mod.rs
error2/src/str_id/: interner.rs  mod.rs  small_string.rs
src/: error_ext.rs  lib.rs  location.rs
