[workspace]
resolver = "3"
members = ["error2", "error2-derive"]

[workspace.package]
version = "0.10.1"
edition = "2024"
authors = ["zihan <ZihanType@proton.me>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/ZihanType/error2"
repository = "https://github.com/ZihanType/error2"
include = ["src/**/*", "Cargo.toml"]

[workspace.dependencies]
# self
error2-derive = { version = "0.10.1", path = "./error2-derive", default-features = false }
error2 = { version = "0.10.1", path = "./error2", default-features = false }

# dependencies
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
quote-use = { version = "0.8", default-features = false }
syn = { version = "2", default-features = false }
heck = { version = "0.5", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
scc = { version = "3", default-features = false }
append-only-vec = { version = "0.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
futures-core = { version = "0.3", default-features = false }
static_assertions = { version = "1", default-features = false }

[workspace.lints.rust]
rust-2024-compatibility = "warn"
