[package]
name = "error2-derive"
description = "A simple error handle library for Rust"
keywords = ["error", "library"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
quote-use = { workspace = true }
syn = { workspace = true, features = ["derive", "parsing", "proc-macro"] }
heck = { workspace = true }

[lints]
workspace = true
