[package]
name = "error2-derive"
description = "A simple error handle library for Rust"
keywords = ["error", "library"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = [
    "derive",
    "parsing",
    "proc-macro",
    "printing",
    "clone-impls",
] }
heck = { workspace = true }

[dev-dependencies]
# cannot contain `workspace = true` to avoid circular dependencies.
error2 = { path = "../error2", default-features = false, features = ["derive"] }

[lints]
workspace = true
